--- a/testing_example.ipynb
+++ b/testing_example.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "from banks import Bank, BanksLoader\n",
+    "from banks import Bank, BanksScrapper\n",
     "\n",
     "#bank = Bank(450000036,1326,'АЛЬФА-БАНК')\n",
     "#bank = Bank(450000370,2306,'Абсолют Банк')"
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "cl = BanksLoader().load_closed()"
+    "cl = BanksScrapper().load_closed()"
    ]
   },
   {
