Edit readme, some fixes

--- a/testing_example.ipynb
+++ b/testing_example.ipynb
@@ -25,20 +25,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pool size: 4\n",
-      "\n",
-      "Loading closed banks...\n",
-      "\n",
-      "Loading descriptions for 2498 closed banks...Wait a while!\n",
-      "Index(['index', 'Город', 'Дата', 'Название банка', 'Номер лицензии',\n",
-      "       'Полное наименование', 'Причина', 'Причина ликвидации',\n",
-      "       'Причина отзыва лицензии'],\n",
-      "      dtype='object')\n"
+      "Pool size: 4\n"
      ]
     }
    ],
    "source": [
-    "cl = BanksScraper().load_closed()"
+    "cl = BanksScraper()"
    ]
   },
   {
