Implemented form101 filling, inheritance Form101 from FormUnit

--- a/testing_example.ipynb
+++ b/testing_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -336,6 +336,7 @@
    },
    "outputs": [],
    "source": [
+    "from banks import Bank, BankScraper\n",
     "from banks.forms import Form101"
    ]
   },
@@ -347,7 +348,8 @@
    },
    "outputs": [],
    "source": [
-    "f = Form101('date')"
+    "bank = Bank(450000036,1326,'АЛЬФА-БАНК')\n",
+    "f = Form101(bank)"
    ]
   },
   {
@@ -360,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "<banks.forms.form101.Form101 at 0x7fae1bfb1748>"
       ]
      },
      "execution_count": 3,
@@ -369,7 +371,212 @@
     }
    ],
    "source": [
-    "f.balance_accounts.Добавочный_капитал.assets_sum()"
+    "f.fill(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>10207</th>\n",
+       "      <th>10601</th>\n",
+       "      <th>10602</th>\n",
+       "      <th>10603</th>\n",
+       "      <th>10605</th>\n",
+       "      <th>10609</th>\n",
+       "      <th>10610</th>\n",
+       "      <th>10701</th>\n",
+       "      <th>10801</th>\n",
+       "      <th>20202</th>\n",
+       "      <th>...</th>\n",
+       "      <th>98050</th>\n",
+       "      <th>98053</th>\n",
+       "      <th>98055</th>\n",
+       "      <th>98060</th>\n",
+       "      <th>98065</th>\n",
+       "      <th>98070</th>\n",
+       "      <th>98080</th>\n",
+       "      <th>98090</th>\n",
+       "      <th>date</th>\n",
+       "      <th>bank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59587623.0</td>\n",
+       "      <td>2403788.0</td>\n",
+       "      <td>1810961.0</td>\n",
+       "      <td>1090204.0</td>\n",
+       "      <td>1665935.0</td>\n",
+       "      <td>102165.0</td>\n",
+       "      <td>480812.0</td>\n",
+       "      <td>2979381.0</td>\n",
+       "      <td>116879083.0</td>\n",
+       "      <td>44098326.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.649309e+14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>830250.0</td>\n",
+       "      <td>95554701.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.040101e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4085666.0</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>450000036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59587623.0</td>\n",
+       "      <td>2403788.0</td>\n",
+       "      <td>1810961.0</td>\n",
+       "      <td>1210699.0</td>\n",
+       "      <td>1320329.0</td>\n",
+       "      <td>102165.0</td>\n",
+       "      <td>480812.0</td>\n",
+       "      <td>2979381.0</td>\n",
+       "      <td>116879083.0</td>\n",
+       "      <td>31104126.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.649309e+14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>831493.0</td>\n",
+       "      <td>95345970.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.449697e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4085666.0</td>\n",
+       "      <td>2016-02-01</td>\n",
+       "      <td>450000036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>59587623.0</td>\n",
+       "      <td>2403785.0</td>\n",
+       "      <td>1810961.0</td>\n",
+       "      <td>1300518.0</td>\n",
+       "      <td>592720.0</td>\n",
+       "      <td>102165.0</td>\n",
+       "      <td>480812.0</td>\n",
+       "      <td>2979381.0</td>\n",
+       "      <td>116879085.0</td>\n",
+       "      <td>30141725.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.649309e+14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>834429.0</td>\n",
+       "      <td>108881095.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.966642e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1755757.0</td>\n",
+       "      <td>2016-03-01</td>\n",
+       "      <td>450000036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>59587623.0</td>\n",
+       "      <td>2403785.0</td>\n",
+       "      <td>1810961.0</td>\n",
+       "      <td>2008985.0</td>\n",
+       "      <td>281619.0</td>\n",
+       "      <td>115146.0</td>\n",
+       "      <td>480758.0</td>\n",
+       "      <td>2979381.0</td>\n",
+       "      <td>116879031.0</td>\n",
+       "      <td>28493640.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.649311e+14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>959089.0</td>\n",
+       "      <td>108837759.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.868732e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1755757.0</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>450000036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59587623.0</td>\n",
+       "      <td>2403785.0</td>\n",
+       "      <td>1810961.0</td>\n",
+       "      <td>2633901.0</td>\n",
+       "      <td>247295.0</td>\n",
+       "      <td>21814.0</td>\n",
+       "      <td>848044.0</td>\n",
+       "      <td>2979381.0</td>\n",
+       "      <td>116879030.0</td>\n",
+       "      <td>32130165.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.649310e+14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>985003.0</td>\n",
+       "      <td>109006458.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.487299e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1755757.0</td>\n",
+       "      <td>2016-05-01</td>\n",
+       "      <td>450000036</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 536 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        10207      10601      10602      10603      10605     10609     10610  \\\n",
+       "0  59587623.0  2403788.0  1810961.0  1090204.0  1665935.0  102165.0  480812.0   \n",
+       "1  59587623.0  2403788.0  1810961.0  1210699.0  1320329.0  102165.0  480812.0   \n",
+       "2  59587623.0  2403785.0  1810961.0  1300518.0   592720.0  102165.0  480812.0   \n",
+       "3  59587623.0  2403785.0  1810961.0  2008985.0   281619.0  115146.0  480758.0   \n",
+       "4  59587623.0  2403785.0  1810961.0  2633901.0   247295.0   21814.0  848044.0   \n",
+       "\n",
+       "       10701        10801       20202    ...             98050  98053  \\\n",
+       "0  2979381.0  116879083.0  44098326.0    ...      6.649309e+14    0.0   \n",
+       "1  2979381.0  116879083.0  31104126.0    ...      6.649309e+14    0.0   \n",
+       "2  2979381.0  116879085.0  30141725.0    ...      6.649309e+14    0.0   \n",
+       "3  2979381.0  116879031.0  28493640.0    ...      6.649311e+14    0.0   \n",
+       "4  2979381.0  116879030.0  32130165.0    ...      6.649310e+14    0.0   \n",
+       "\n",
+       "      98055        98060  98065         98070  98080      98090       date  \\\n",
+       "0  830250.0   95554701.0    0.0  2.040101e+11    0.0  4085666.0 2016-01-01   \n",
+       "1  831493.0   95345970.0    0.0  2.449697e+11    0.0  4085666.0 2016-02-01   \n",
+       "2  834429.0  108881095.0    0.0  1.966642e+11    0.0  1755757.0 2016-03-01   \n",
+       "3  959089.0  108837759.0    0.0  1.868732e+11    0.0  1755757.0 2016-04-01   \n",
+       "4  985003.0  109006458.0    0.0  2.487299e+11    0.0  1755757.0 2016-05-01   \n",
+       "\n",
+       "        bank  \n",
+       "0  450000036  \n",
+       "1  450000036  \n",
+       "2  450000036  \n",
+       "3  450000036  \n",
+       "4  450000036  \n",
+       "\n",
+       "[5 rows x 536 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.to_dataframe()"
    ]
   },
   {
