Fixed form102 structure

--- a/testing_example.ipynb
+++ b/testing_example.ipynb
@@ -337,7 +337,7 @@
    "outputs": [],
    "source": [
     "from banks import Bank, BankScraper\n",
-    "from banks.forms import Form101"
+    "from banks.forms import Form101, Form102"
    ]
   },
   {
@@ -349,29 +349,31 @@
    "outputs": [],
    "source": [
     "bank = Bank(450000036,1326,'АЛЬФА-БАНК')\n",
-    "f = Form101(bank)"
+    "f = Form102(bank)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<banks.forms.form101.Form101 at 0x7fae1bfb1748>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'FormUnit' object has no attribute 'assets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-3e21ae85b338>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mДоходы\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mПо_банковским_операциям_и_другим_сделкам\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mПроцентные_Доходы\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mПо_депозитам_клиентов___физических_лиц\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mincome_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/media/storage/Dropbox/dev/cbr_scraper/banks/forms/form102.py\u001b[0m in \u001b[0;36mincome_sum\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mincome_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[1;34m\"\"\"Returns the amount of assets in this unit\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0macc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbalance\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0macc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massets\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mexpenses_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'FormUnit' object has no attribute 'assets'"
+     ]
     }
    ],
    "source": [
-    "f.fill(5)"
+    "f.Доходы.По_банковским_операциям_и_другим_сделкам.Процентные_Доходы.По_депозитам_клиентов___физических_лиц.income_sum()"
    ]
   },
   {
