--- a/testing_example.ipynb
+++ b/testing_example.ipynb
@@ -354,26 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'FormUnit' object has no attribute 'assets'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-3e21ae85b338>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mДоходы\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mПо_банковским_операциям_и_другим_сделкам\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mПроцентные_Доходы\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mПо_депозитам_клиентов___физических_лиц\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mincome_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/media/storage/Dropbox/dev/cbr_scraper/banks/forms/form102.py\u001b[0m in \u001b[0;36mincome_sum\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mincome_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[1;34m\"\"\"Returns the amount of assets in this unit\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0macc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbalance\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0macc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massets\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mexpenses_sum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'FormUnit' object has no attribute 'assets'"
-     ]
+     "data": {
+      "text/plain": [
+       "<banks.forms.form102.Form102 at 0x7f24f62e1c50>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "f.Доходы.По_банковским_операциям_и_другим_сделкам.Процентные_Доходы.По_депозитам_клиентов___физических_лиц.income_sum()"
+    "f.fill(3)"
    ]
   },
   {
@@ -391,25 +389,25 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>10207</th>\n",
-       "      <th>10601</th>\n",
-       "      <th>10602</th>\n",
-       "      <th>10603</th>\n",
-       "      <th>10605</th>\n",
-       "      <th>10609</th>\n",
-       "      <th>10610</th>\n",
-       "      <th>10701</th>\n",
-       "      <th>10801</th>\n",
-       "      <th>20202</th>\n",
+       "      <th>11101</th>\n",
+       "      <th>11102</th>\n",
+       "      <th>11103</th>\n",
+       "      <th>11104</th>\n",
+       "      <th>11105</th>\n",
+       "      <th>11106</th>\n",
+       "      <th>11107</th>\n",
+       "      <th>11108</th>\n",
+       "      <th>11109</th>\n",
+       "      <th>11110</th>\n",
        "      <th>...</th>\n",
-       "      <th>98050</th>\n",
-       "      <th>98053</th>\n",
-       "      <th>98055</th>\n",
-       "      <th>98060</th>\n",
-       "      <th>98065</th>\n",
-       "      <th>98070</th>\n",
-       "      <th>98080</th>\n",
-       "      <th>98090</th>\n",
+       "      <th>17301</th>\n",
+       "      <th>17302</th>\n",
+       "      <th>17303</th>\n",
+       "      <th>17304</th>\n",
+       "      <th>17305</th>\n",
+       "      <th>17306</th>\n",
+       "      <th>17307</th>\n",
+       "      <th>10000</th>\n",
        "      <th>date</th>\n",
        "      <th>bank</th>\n",
        "    </tr>\n",
@@ -417,159 +415,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>59587623.0</td>\n",
-       "      <td>2403788.0</td>\n",
-       "      <td>1810961.0</td>\n",
-       "      <td>1090204.0</td>\n",
-       "      <td>1665935.0</td>\n",
-       "      <td>102165.0</td>\n",
-       "      <td>480812.0</td>\n",
-       "      <td>2979381.0</td>\n",
-       "      <td>116879083.0</td>\n",
-       "      <td>44098326.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>356974.0</td>\n",
+       "      <td>2750121.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.649309e+14</td>\n",
+       "      <td>2524.0</td>\n",
+       "      <td>435264.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>830250.0</td>\n",
-       "      <td>95554701.0</td>\n",
+       "      <td>197516.0</td>\n",
+       "      <td>54179.0</td>\n",
+       "      <td>10400.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.040101e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4085666.0</td>\n",
+       "      <td>5.242783e+09</td>\n",
        "      <td>2016-01-01</td>\n",
        "      <td>450000036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>59587623.0</td>\n",
-       "      <td>2403788.0</td>\n",
-       "      <td>1810961.0</td>\n",
-       "      <td>1210699.0</td>\n",
-       "      <td>1320329.0</td>\n",
-       "      <td>102165.0</td>\n",
-       "      <td>480812.0</td>\n",
-       "      <td>2979381.0</td>\n",
-       "      <td>116879083.0</td>\n",
-       "      <td>31104126.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>145432.0</td>\n",
+       "      <td>657376.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12390.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.649309e+14</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>831493.0</td>\n",
-       "      <td>95345970.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.449697e+11</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4085666.0</td>\n",
-       "      <td>2016-02-01</td>\n",
-       "      <td>450000036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>59587623.0</td>\n",
-       "      <td>2403785.0</td>\n",
-       "      <td>1810961.0</td>\n",
-       "      <td>1300518.0</td>\n",
-       "      <td>592720.0</td>\n",
-       "      <td>102165.0</td>\n",
-       "      <td>480812.0</td>\n",
-       "      <td>2979381.0</td>\n",
-       "      <td>116879085.0</td>\n",
-       "      <td>30141725.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.649309e+14</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>834429.0</td>\n",
-       "      <td>108881095.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.966642e+11</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1755757.0</td>\n",
-       "      <td>2016-03-01</td>\n",
-       "      <td>450000036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>59587623.0</td>\n",
-       "      <td>2403785.0</td>\n",
-       "      <td>1810961.0</td>\n",
-       "      <td>2008985.0</td>\n",
-       "      <td>281619.0</td>\n",
-       "      <td>115146.0</td>\n",
-       "      <td>480758.0</td>\n",
-       "      <td>2979381.0</td>\n",
-       "      <td>116879031.0</td>\n",
-       "      <td>28493640.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6.649311e+14</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>959089.0</td>\n",
-       "      <td>108837759.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.868732e+11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1755757.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "      <td>2016-04-01</td>\n",
        "      <td>450000036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>59587623.0</td>\n",
-       "      <td>2403785.0</td>\n",
-       "      <td>1810961.0</td>\n",
-       "      <td>2633901.0</td>\n",
-       "      <td>247295.0</td>\n",
-       "      <td>21814.0</td>\n",
-       "      <td>848044.0</td>\n",
-       "      <td>2979381.0</td>\n",
-       "      <td>116879030.0</td>\n",
-       "      <td>32130165.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>384698.0</td>\n",
+       "      <td>1121829.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>49243.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.649310e+14</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>985003.0</td>\n",
-       "      <td>109006458.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.487299e+11</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1755757.0</td>\n",
-       "      <td>2016-05-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2016-07-01</td>\n",
        "      <td>450000036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 536 columns</p>\n",
+       "<p>3 rows × 130 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        10207      10601      10602      10603      10605     10609     10610  \\\n",
-       "0  59587623.0  2403788.0  1810961.0  1090204.0  1665935.0  102165.0  480812.0   \n",
-       "1  59587623.0  2403788.0  1810961.0  1210699.0  1320329.0  102165.0  480812.0   \n",
-       "2  59587623.0  2403785.0  1810961.0  1300518.0   592720.0  102165.0  480812.0   \n",
-       "3  59587623.0  2403785.0  1810961.0  2008985.0   281619.0  115146.0  480758.0   \n",
-       "4  59587623.0  2403785.0  1810961.0  2633901.0   247295.0   21814.0  848044.0   \n",
+       "   11101  11102  11103  11104     11105      11106  11107  11108    11109  \\\n",
+       "0    0.0    0.0    0.0    0.0  356974.0  2750121.0    0.0    0.0      0.0   \n",
+       "1    0.0    0.0    0.0    0.0  145432.0   657376.0    0.0    0.0  12390.0   \n",
+       "2    0.0    0.0    0.0    0.0  384698.0  1121829.0    0.0    0.0  49243.0   \n",
        "\n",
-       "       10701        10801       20202    ...             98050  98053  \\\n",
-       "0  2979381.0  116879083.0  44098326.0    ...      6.649309e+14    0.0   \n",
-       "1  2979381.0  116879083.0  31104126.0    ...      6.649309e+14    0.0   \n",
-       "2  2979381.0  116879085.0  30141725.0    ...      6.649309e+14    0.0   \n",
-       "3  2979381.0  116879031.0  28493640.0    ...      6.649311e+14    0.0   \n",
-       "4  2979381.0  116879030.0  32130165.0    ...      6.649310e+14    0.0   \n",
+       "   11110    ...       17301     17302  17303     17304    17305    17306  \\\n",
+       "0    0.0    ...      2524.0  435264.0    0.0  197516.0  54179.0  10400.0   \n",
+       "1    0.0    ...         0.0       0.0    0.0       0.0      0.0      0.0   \n",
+       "2    0.0    ...         0.0       0.0    0.0       0.0      0.0      0.0   \n",
        "\n",
-       "      98055        98060  98065         98070  98080      98090       date  \\\n",
-       "0  830250.0   95554701.0    0.0  2.040101e+11    0.0  4085666.0 2016-01-01   \n",
-       "1  831493.0   95345970.0    0.0  2.449697e+11    0.0  4085666.0 2016-02-01   \n",
-       "2  834429.0  108881095.0    0.0  1.966642e+11    0.0  1755757.0 2016-03-01   \n",
-       "3  959089.0  108837759.0    0.0  1.868732e+11    0.0  1755757.0 2016-04-01   \n",
-       "4  985003.0  109006458.0    0.0  2.487299e+11    0.0  1755757.0 2016-05-01   \n",
+       "   17307         10000       date       bank  \n",
+       "0    0.0  5.242783e+09 2016-01-01  450000036  \n",
+       "1    0.0  0.000000e+00 2016-04-01  450000036  \n",
+       "2    0.0  0.000000e+00 2016-07-01  450000036  \n",
        "\n",
-       "        bank  \n",
-       "0  450000036  \n",
-       "1  450000036  \n",
-       "2  450000036  \n",
-       "3  450000036  \n",
-       "4  450000036  \n",
-       "\n",
-       "[5 rows x 536 columns]"
+       "[3 rows x 130 columns]"
       ]
      },
      "execution_count": 4,
@@ -578,7 +515,7 @@
     }
    ],
    "source": [
-    "f.to_dataframe()"
+    "f.Доходы.to_dataframe()"
    ]
   },
   {
